[gd_scene load_steps=9 format=2]

[ext_resource path="res://nivel/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://nivel/PlataformasFlotantes.tscn" type="PackedScene" id=3]
[ext_resource path="res://nivel/Piso.tscn" type="PackedScene" id=4]
[ext_resource path="res://enemy/boss.tscn" type="PackedScene" id=5]
[ext_resource path="res://nivel/nivelBoss/nivel_boss.gd" type="Script" id=6]
[ext_resource path="res://Objetos/Camera2D.tscn" type="PackedScene" id=7]
[ext_resource path="res://Player/TimerDead.tscn" type="PackedScene" id=8]

[node name="nivel_boss" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Piso" parent="." instance=ExtResource( 4 )]

[node name="PlataformasFlotantes" parent="." instance=ExtResource( 3 )]
tile_data = PoolIntArray(  )

[node name="Boss" parent="." instance=ExtResource( 5 )]
position = Vector2( -152.839, 386.936 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 246.857, 445.953 )

[node name="Camera2D" parent="." instance=ExtResource( 7 )]
zoom = Vector2( 0.45, 0.45 )

[node name="TimerDead" parent="." instance=ExtResource( 8 )]
[connection signal="hit" from="Boss" to="." method="_on_game_over"]
[connection signal="hitClone" from="Boss" to="." method="_on_delete_clone"]
[connection signal="timeout" from="TimerDead" to="." method="_on_TimerDead_timeout"]
